--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ec.payment.employee</groupId>
-    <artifactId>payment-employee</artifactId>
+    <artifactId>payment-employee-fee</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <description>Project for calculate the payment fees for the employee</description>
