--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>payment-employee-fee</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <description>Project for calculate the payment fees for the employee</description>
+    <description>Project for calculate the payment fees for the employees</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -25,6 +25,17 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>ec.payment.employee.main.Main</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
             <plugin>
