--- a/.github/workflows/payment-emplpyee-fee-workflow.yml
+++ b/.github/workflows/payment-emplpyee-fee-workflow.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Manual workflow
+name: Payment Employee Fee Workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -20,3 +20,7 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Execute Static  Analisys with SonarCloud
+      run: mvn sonar:sonar \
+        -Dsonar.host.url=https://sonarcloud.io \
+        -Dsonar.login=${{ SONAR_TOKEN }}
