--- a/.github/workflows/payment-emplpyee-fee-workflow.yml
+++ b/.github/workflows/payment-emplpyee-fee-workflow.yml
@@ -21,6 +21,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Execute Static  Analisys with SonarCloud
-      run: mvn sonar:sonar \
-        -Dsonar.host.url=https://sonarcloud.io \
-        -Dsonar.login=${{ SONAR_TOKEN }}
+      run: mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ SONAR_TOKEN }}
