--- a/.github/workflows/payment-employee-fee-workflow.yml
+++ b/.github/workflows/payment-employee-fee-workflow.yml
@@ -20,5 +20,5 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Execute Static  Analisys with SonarCloud
-      run: mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ SONAR_TOKEN }}
+    - name: Execute Static Code Analisys with SonarCloud
+      run: mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
