--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.organization=ec.payment.employee:payment-employee-fee
+sonar.organization=Vinicio Ochoa
 sonar.projectKey=payment-employee-fee
 
 # relative paths to source directories. More details and properties are described
