--- a/.github/workflows/payment-employee-fee-workflow.yml
+++ b/.github/workflows/payment-employee-fee-workflow.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Execute Static Code Analisys with SonarCloud
-      run: mvn sonar:sonar -Dsonar.projectKey=payment-employee-fee -Dsonar.organization=fochoac -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      run: mvn sonar:sonar -Dsonar.projectKey=payment-employee-fee -Dsonar.organization=fochoac -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.scanner.force-deprecated-java-version=true
