--- a/.github/workflows/payment-employee-fee-workflow.yml
+++ b/.github/workflows/payment-employee-fee-workflow.yml
@@ -31,5 +31,7 @@ jobs:
          uses: actions/setup-java@v1
          with:
            java-version: 11
+       - name: Build with Maven
+           run: mvn -B package --file pom.xml
        - name: Execute Static Code Analisys with SonarCloud
-         run: mvn sonar:sonar -Dsonar.projectKey=payment-employee-fee -Dsonar.organization=fochoac -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+         run: mvn sonar:sonar -Dsonar.projectKey=payment-employee-fee -Dsonar.organization=fochoac -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.language=java
