--- a/.github/workflows/payment-employee-fee-workflow.yml
+++ b/.github/workflows/payment-employee-fee-workflow.yml
@@ -34,4 +34,8 @@ jobs:
        - name: Build with Maven
            run: mvn -B package --file pom.xml
        - name: Execute Static Code Analisys with SonarCloud
-         run: mvn sonar:sonar -Dsonar.projectKey=payment-employee-fee -Dsonar.organization=fochoac -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.language=java
+         run: mvn sonar:sonar -Dsonar.projectKey=payment-employee-fee \
+              -Dsonar.organization=fochoac \
+              -Dsonar.host.url=https://sonarcloud.io \
+              -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+              -Dsonar.language=java
